# piv-authenticator

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  Cargo.toml  Makefile  README.md  bacon.toml
.cargo/: config
.github/workflows/: ci.yaml
.reuse/: dep5
ci/: Dockerfile  Makefile  entrypoint.sh
examples/: usbip.rs  virtual.rs  vpicc.rs
src/: apdu_dispatch.rs  commands.rs  constants.rs  container.rs  derp.rs  dispatch.rs  lib.rs  piv_types.rs  reply.rs  state.rs  tlv.rs  virt.rs  vpicc.rs
tests/: aa_serial.rs  bad_admin_key  command_response.ron  command_response.rs  default_admin_key  generate_asymmetric_keypair.rs  get_data.rs  large-cert.der  large-cert.pem  opensc.rs  pivy.rs  put_data.rs
tests/card/: mod.rs
tests/setup/: mod.rs
