[package]
name = "piv-authenticator"
version = "0.4.0"
authors = ["Nicolas Stalder <n@stalder.io>", "Nitrokey GmbH"]
edition = "2021"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/nitrokey/piv-authenticator"
documentation = "https://docs.rs/piv-authenticator"

[[example]]
name = "vpicc"
required-features = ["vpicc"]


[[example]]
name = "usbip"
required-features = ["apdu-dispatch", "virt"]

[dependencies]
apdu-dispatch = { version = "0.1", optional = true }
delog = { version = "0.1.5", optional = true }
flexiber = { version = "0.1", features = ["derive", "heapless"] }
heapless = "0.7"
hex-literal = "0.3"
iso7816 = "0.1"
serde = { version = "1", default-features = false, features = ["derive"] }
trussed = { version = "0.1", features = ["serde-extensions"] }
trussed-auth = { version = "0.3" }
untrusted = "0.9"
vpicc = { version = "0.1.0", optional = true }
log = "0.4"
heapless-bytes = "0.3.0"
subtle = { version = "2", default-features = false }
trussed-chunked = "0.1.0"
trussed-rsa-alloc = { version = "0.1.0", features = ["raw"], optional = true }
trussed-chunked = "0.1.0"
trussed-staging = { version = "0.3.0", features = ["chunked"], default-features = false }

[dev-dependencies]
littlefs2 = "0.3.2"
rand_core = { version = "0.6", features = ["getrandom"] }
trussed = { version = "0.1.0", features = ["virt"] }
env_logger = "0.9"
serde = { version = "1", features = ["derive"] }
serde_cbor = { version = "0.11", features = ["std"] }
hex  = "0.4"
test-log = "0.2.11"
ron  = "0.8"
des = "0.8"
aes = "0.8.2"
stoppable_thread = "0.2.1"
expectrl = "0.6.0"

# Examples
# usbip
trussed-usbip = { version = "0.0.1", default-features = false, features = ["ccid"] }
usbd-ccid = { version = "0.2.0", features = ["highspeed-usb"]}
rand = "0.8.5"
asn1 = "0.15.2"

[features]
default = []
strict-pin = []
std = []
vpicc = ["std", "dep:vpicc", "virt"]
virt = ["std", "trussed/virt"]
pivy-tests = []
opensc-tests = []
alloc = []
rsa = ["trussed-rsa-alloc", "alloc"]

log-all = []
log-none = []
log-info = []
log-debug = []
log-warn = []
log-error = []

[patch.crates-io]
trussed = { git = "https://github.com/nitrokey/trussed" , tag = "v0.1.0-nitrokey.18" }
littlefs2 = { git = "https://github.com/trussed-dev/littlefs2.git", rev = "ebd27e49ca321089d01d8c9b169c4aeb58ceeeca" }
trussed-auth = { git = "https://github.com/trussed-dev/trussed-auth.git", tag = "v0.3.0"}
trussed-rsa-alloc = { git = "https://github.com/trussed-dev/trussed-rsa-backend.git", rev = "9732a9a3e98af72112286afdc9b7174c66c2869a" }
trussed-chunked = { git = "https://github.com/trussed-dev/trussed-staging.git", tag = "chunked-v0.1.0" }
trussed-staging = { git = "https://github.com/trussed-dev/trussed-staging.git", tag = "v0.3.0" }
apdu-dispatch = { git = "https://github.com/Nitrokey/apdu-dispatch", tag = "v0.1.2-nitrokey.2" }
trussed-usbip = { git = "https://github.com/Nitrokey/pc-usbip-runner.git", tag = "v0.0.1-nitrokey.1" }
usbd-ccid = { git = "https://github.com/Nitrokey/usbd-ccid", tag = "v0.2.0-nitrokey.1" }

[profile.dev.package.rsa]
opt-level = 2

[profile.dev.package.num-bigint-dig]
opt-level = 2
