[package]
name = "piv-authenticator"
version = "0.3.8"
authors = ["Nicolas Stalder <n@stalder.io>", "Nitrokey GmbH"]
edition = "2021"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/nitrokey/piv-authenticator"
documentation = "https://docs.rs/piv-authenticator"

[[example]]
name = "vpicc"
required-features = ["vpicc"]

[dependencies]
apdu-app = { version = "0.1", optional = true }
delog = { version = "0.1.5", optional = true }
flexiber = { version = "0.1", features = ["derive", "heapless"] }
heapless = "0.7"
hex-literal = "0.3"
iso7816 = "0.1.3"
serde = { version = "1", default-features = false, features = ["derive"] }
trussed = { version = "0.1", features = ["serde-extensions"] }
trussed-auth = { version = "0.3" }
untrusted = "0.9"
vpicc = { version = "0.1.0", optional = true }
log = "0.4"
heapless-bytes = "0.3.0"
subtle = { version = "2", default-features = false }
trussed-rsa-alloc = { version = "0.2.1", features = ["raw"], optional = true }
trussed-chunked = "0.1.0"
trussed-hpke = "0.1.0"
trussed-wrap-key-to-file = "0.1.0"
trussed-staging = { version = "0.3.2", features = ["chunked", "hpke", "wrap-key-to-file"], default-features = false, optional = true }
littlefs2 = "0.4.0"
cfg-if = "1.0.0"

[dev-dependencies]
rand_core = { version = "0.6", features = ["getrandom"] }
trussed = { version = "0.1.0", features = ["virt"] }
env_logger = "0.9"
serde = { version = "1", features = ["derive"] }
serde_cbor = { version = "0.11", features = ["std"] }
hex  = "0.4"
test-log = "0.2.11"
ron  = "0.8"
des = "0.8"
aes = "0.8.2"
stoppable_thread = "0.2.1"
expectrl = "0.7.0"
iso7816 = { version = "0.1.2", features = ["std"] }

# Examples
# usbip
rand = "0.8.5"
asn1 = "0.15.2"

[features]
default = []
apdu-dispatch = ["dep:apdu-app"]
strict-pin = []
std = []
vpicc = ["std", "dep:vpicc", "virt"]
virt = ["std", "trussed/virt", "dep:trussed-staging"]
pivy-tests = []
opensc-tests = []
alloc = []
rsa = ["trussed-rsa-alloc", "alloc"]

log-all = []
log-none = []
log-info = []
log-debug = []
log-warn = []
log-error = []

dangerous-test-real-card = []

[patch.crates-io]
trussed = { git = "https://github.com/Nitrokey/trussed" , tag = "v0.1.0-nitrokey.18" }
littlefs2 = { git = "https://github.com/trussed-dev/littlefs2.git", rev = "498fee7f7b908cb14e6ac18dca8442e19c89c0a9" }
trussed-auth = { git = "https://github.com/trussed-dev/trussed-auth.git", tag = "v0.3.0"}
trussed-rsa-alloc = { git = "https://github.com/trussed-dev/trussed-rsa-backend.git", tag = "v0.2.1" }
trussed-chunked = { git = "https://github.com/trussed-dev/trussed-staging.git", tag = "chunked-v0.1.0" }
trussed-staging = { git = "https://github.com/trussed-dev/trussed-staging.git", tag = "v0.3.2" }
trussed-hpke = { git = "https://github.com/trussed-dev/trussed-staging.git", tag = "hpke-v0.1.0" }
trussed-wrap-key-to-file = { git = "https://github.com/trussed-dev/trussed-staging.git", tag = "wrap-key-to-file-v0.1.0" }

[profile.dev.package.rsa]
opt-level = 2

[profile.dev.package.num-bigint-dig]
opt-level = 2
